# CandleScript

./: .gitignore  CMakeLists.txt  main.cpp
src/Interpreter/Visitor/: Visitor.cpp  Visitor.h
src/Lexer/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  Tokens.h
src/Parser/: Parser.cpp  Parser.h  ParserError.h  SyntaxNode.cpp  SyntaxNode.h
tests/: lexer.tests.cpp
